--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -174,6 +174,12 @@ footer li {
     list-style: none;
     font-family: opensans;
 }
+
+.social-media {
+    display: flex;
+    justify-content: space-around;
+}
+
 /*---------------------------------------*/
 
 /* Add media query */
