--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -47,15 +47,20 @@ header {
     font-size: 1.4rem;
     padding: 0.675rem;
 }
-h1, h2, h3 {
+h1, h2, h3, h4 {
     font-family: baloo2;
     text-align: center;
 }
 
+h2 {
+    background-color: var(--main-color);
+}
+
 p {
+    background-color: var(--main-color);
     font-family: opensans;
     text-align: justify;
-    margin: 0px 12px 12px 12px;
+    padding: 0px 12px 12px 12px;
     
 }
 
@@ -63,7 +68,8 @@ p {
 
 
 .backpict {
-    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 .title-search {
@@ -85,7 +91,13 @@ main {
 .sous-zone {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 70%;
+}
+
+.sous-zone-r {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
 }
 
 .pict {
@@ -102,56 +114,13 @@ form {
     
 }
 
-
-/*
-p {
-    margin-bottom: 24px;
+input {
+    width: 20rem;
 }
 
-.compo-search {
-    display: flex;
-    flex-wrap: wrap;
-    width: 50%;
-
+button {
+    width: 10rem;
 }
-
-.infos-serv {
-    display: flex;
-    flex-wrap: wrap;
-    width: 60%;
-    margin-top: 10px;
-    
-}
-
-.infos-serv-label {
-    display: flex;
-    padding: 12px;
-}
-
-.infos-serv-label div {
-    margin-right: 12px;
-}
-
-.infos-links {
-    display: flex;
-    justify-content: flex-end;
-    flex-wrap: wrap;
-    width: 100%;
-    margin-top: 10px;
-    
-}
-
-#ordre {
-    display: flex;
-    justify-content: center;
-    padding-right: 12px;
-    padding-bottom: 12px;
-    width: 400px;
-}
-.ordre:nth-of-type(1) {order: 1;}
-.ordre:nth-of-type(2) {order: 2;}
-.ordre:nth-of-type(3) {order: 3;}
-*/
 
 footer {
     display: flex;
