--- a/asset/css/aboutus.css
+++ b/asset/css/aboutus.css
@@ -15,50 +15,81 @@
     src: url("../fonts-family/OpenSans/OpenSans-Regular.ttf");
 }
 
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #B1F3BC;
-    width: 100%;
+/*Header*/
+
+:root {
+    --main-color: #b1f3bc;
+    --third-color: white;
 }
 
-.menu{
-    display: flex;
-    gap: 3rem;
+* {
+    padding: 0;
+    margin: 0;
+    color: inherit;
 }
 
-.compte{
-    font-size: 1.5rem;
-    padding-right: 4rem;
-    text-decoration: underline;
-    font-family: 'Baloo 2'
-}
-
-.compte:hover{
-    font-weight: bolder;
-    transition: 0.3s ease;
-}
-
-.logo{
-    padding-left: 1rem;
-    transition: 0.3s ease;
+a {
+    text-decoration: none;
 }
 
 .logo:hover {
-    opacity: 0.5;
+    opacity: 0.6;
 }
 
-a{
-    color: black;
-    font-size: 1.5rem;
-    transition: 0.3s ease;
-    font-family: 'Baloo 2'
+.title-txt {
+    font-family: "Baloo 2", sans-serif;
+    font-size: 1.4rem;
+}
+.flex {
+    display: flex;
 }
 
-.menu a:hover{
+.justify-content{
+    justify-content: space-between;
+}
+
+.align-item{
+    align-items: center;
+}
+
+.menu li {
+    list-style: none;
+    margin: 0 40px 0 0;
+}
+
+.menu a:hover, .logo-mon-compte:hover {
     font-weight: bolder;
 }
+
+header {
+    background-color: var(--main-color);
+    font-family: "Baloo 2";
+    font-size: 1.4rem;
+    padding: 0.675rem;
+}
+
+#check, .checkbtn {
+    display: none;
+    cursor: pointer;
+}
+
+@media all and (max-width: 768px) {
+    
+    .checkbtn {
+        display: block;
+        font-size: 30px;
+        padding-right: 0.675rem;
+        color: black;
+        float: right;
+    }
+
+    .menu, .logo-mon-compte, header nav {
+        display: none!important;
+    }
+
+}
+
+/*Contenu page*/
 
 p{
     color: white;
@@ -169,67 +200,158 @@ h1{
     font-family: 'Open Sans'
 }
 
-footer{
-    background-color: black;
+
+/*Footer*/
+
+footer {
+    background-color: #1f1f1f;
+    font-family: "Open Sans";
+    padding-top: 0.675rem;
 }
 
-h2{
-    color: white;
-    font-size: 1.5rem;
-}
-
-
-.logowhite:hover{
-    opacity: 0.5;
-    transition: 0.3s ease;
-}
-
-.p3{
-    color: white;
-    margin: 1rem;
-    font-size: 1.5rem;
-    font-family: 'Baloo 2'
-}
-
-.logos{
+.social-media {
+    color: var(--third-color);
     display: flex;
-    gap: 5rem;
-    margin: 1rem;
-    font-size: 5rem;
-}
-
-.colonnes{
-display: flex;
-justify-content: space-between;
-color: white;
-padding: 2rem;
-font-family: 'Baloo 2'
-}
-
-.listef{
-    padding: 0;
+    flex-direction: row;
     font-size: 1.5rem;
+    padding-left: 38px;
 }
 
-.a2{
-    color: white;
+.social-media li {
+    padding: 20px;
 }
 
-.a2:hover {
+footer p, footer h2, footer li {
+    color: var(--third-color);
+}
+
+.colonne {
+    display: flex;
+    padding-top: 0.675rem;
+}
+
+footer ul {
+    flex-flow: column;
+}
+
+footer li {
+    list-style: none;
+    padding-bottom: 1rem;
+}
+
+.footer-services, .footer-access, .footer-contact {
+    display: flex;
+    flex-direction: column;
+    padding-left: 8.95rem;
+}
+
+
+.copyright {
+    padding-bottom: 0.675rem;
+    text-align: center;
+}
+
+.footer-logo img {
+    width: 150px;
+    height: 73px;
+}
+
+.footer-logo {
+    padding: 0.675rem;
+    padding-top: 0;
+}
+
+footer p {
+padding-left: 9px;
+padding-top: 2rem;
+}
+
+#fb:hover, #tw:hover, #insta:hover {
+    transform: scale(2);
+    cursor: pointer;
+}
+
+footer h2 {
+    padding-bottom: 10px;
+}
+
+footer li a:hover {
     text-decoration: underline;
 }
 
-.c1, .c2, .c3 {
+.footer-queries {
     display: flex;
-    flex-direction: column;
-    text-align: left;
+    justify-content: space-around;
 }
 
-.copyrigth{
-    display: flex;
-    justify-content: center;
-    font-size: 1.5rem;
+/*Media queries footer*/
+
+@media all and (max-width: 1200px) {
+    .colonne {
+        flex-direction: column;
+    }
+
+    .footer-access, .footer-services, .footer-contact {
+        width: 33.33%;
+    }
+
 }
+
+@media all and (max-width: 992px) {
+    .footer-access, .footer-services, .footer-contact {
+        padding-left: 1.5rem;
+    }
+    .social-media {
+        padding-left: 0rem;
+    }
+    .footer-access, .footer-services, .footer-contact {
+        width: 20%;
+    } 
+}
+
+@media all and (max-width: 768px) {
+    .footer-access, .footer-services, .footer-contact {
+        padding-left: 1.5rem;
+}
+}
+
+@media all and (max-width: 576px) {
+    .colonne {
+        flex-direction: column;
+    }
+    .footer-access, .footer-services, .footer-contact {
+        padding: 0.675rem;
+        padding-left: 1rem;
+    }
+
+    .logo {
+        padding-left: 12.5rem;
+    }
+
+    .footer-logo p {
+        padding-left: 8.5rem;
+    }
+
+    .social-media {
+        font-size: 3.5rem;
+        padding-left: 0rem;
+        justify-content: space-around;
+    }
+
+    .social-media li {
+        padding: 1rem 8.6rem 1rem 0rem;
+    }
+
+    .footer-queries {
+        flex-direction: column;
+    }
+
+    .social-media li:last-child {
+        padding-right: 0;
+    }
+}
+
+/*Media queries contenu page*/
 
 @media all and (max-width: 1230px){
     .rectangle-vert{
