--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -8,6 +8,7 @@
     font-family: "opensans";
     src: url(../fonts-family/OpenSans/OpenSans-Regular.ttf);
 }
+
 :root {
     --main-color: #b1f3bc;
     --third-color: white;
@@ -31,6 +32,7 @@ a {
     font-family: "Baloo2", sans-serif;
     font-size: 1.4rem;
 }
+
 .flex {
     display: flex;
 }
@@ -45,10 +47,10 @@ a {
 
 .menu li {
     list-style: none;
-    margin: 0 2.5rem 0 0;
+    margin: 0 40px 0 0;
 }
 
-.menu a:hover, .logo-mon-compte a:hover {
+.menu a:hover, .logo-mon-compte:hover {
     font-weight: bolder;
 }
 
@@ -57,6 +59,26 @@ header {
     font-family: baloo2;
     font-size: 1.4rem;
     padding: 0.675rem;
+}
+
+#check, .checkbtn {
+    display: none;
+    cursor: pointer;
+}
+
+@media all and (max-width: 768px) {
+    
+    .checkbtn {
+        display: block;
+        font-size: 30px;
+        padding-right: 0.675rem;
+        color: black;
+        float: right;
+    }
+
+    .menu, .logo-mon-compte, header nav {
+        display: none!important;
+    }
 }
 
 /*body - page contact*/
@@ -125,7 +147,7 @@ h1 {
     width: 80%;
     padding: 1.875rem 1.25rem 1.875rem 1.25rem;
    
-    .social-media {background-color: #b1f3bc; 
+    .social-networks {background-color: #b1f3bc; 
         font-size: 1.25rem;
         margin-bottom: 1%;
     }
@@ -137,49 +159,162 @@ h1 {
     margin-bottom: 1%;   
 }
 
-/*footer commun*/
-
-/*footer perso*/
-footer {
-    background-color: black;
-    color: aliceblue;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 0.313rem;
-}
-footer a {
-    color: aliceblue;
-}
-footer a:hover {
-    color: aliceblue;
-    font-weight: bolder;
-}
-
-.social-networks {
-    img{
-        /*.contrast{filter: contrast(300%);}*/
-        color: aliceblue;
+@media screen AND (max-width: 768px) {
+    .phone, .formatting, #subjet, #subjet-selected, #message, #submit {
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        
     }
 }
+   
+    
 
-.services, .rapid-access, .to-contact {
-    color: aliceblue;
+
+/*footer commun*/
+
+footer {
+    background-color: #1f1f1f;
+    font-family: "opensans";
+    padding-top: 0.675rem;
 }
-.copyright {
+    
+.social-media {
+    color: var(--third-color);
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    font-size: 1.5rem;
+    padding-left: 38px;
+}
+
+.social-media li {
+    padding: 20px;
+}
+
+footer p, footer h2, footer li {
+    color: var(--third-color);
+}
+
+.colonne {
+    display: flex;
+    padding-top: 0.675rem;
+}
+
+footer ul {
+    flex-flow: column;
+}
+
+footer li {
+    list-style: none;
+    padding-bottom: 1rem;
+}
+
+.footer-services, .footer-access, .footer-contact {
+    display: flex;
+    flex-direction: column;
+    padding-left: 8.95rem;
+}
+
+
+.copyright {
+    padding-bottom: 0.675rem;
     text-align: center;
 }
 
-/*medias query*/
-@media all AND (max-width:579px)
-    {
-        nav {
-            display: none;
-        }
-        .logo-my-account {
-            display: none;
-        }
+.footer-logo img {
+    width: 150px;
+    height: 73px;
+}
+
+.footer-logo {
+    padding: 0.675rem;
+    padding-top: 0;
+}
+
+footer p {
+padding-left: 9px;
+padding-top: 2rem;
+}
+
+#fb:hover, #tw:hover, #insta:hover {
+    transform: scale(2);
+    cursor: pointer;
+}
+
+footer h2 {
+    padding-bottom: 10px;
+}
+
+footer li a:hover {
+    text-decoration: underline;
+}
+
+.footer-queries {
+    display: flex;
+    justify-content: space-around;
+}
+
+@media all and (max-width: 1200px) {
+    .colonne {
+        flex-direction: column;
     }
 
+    .footer-access, .footer-services, .footer-contact {
+        width: 33.33%;
+    }
 
+}
+
+@media all and (max-width: 992px) {
+    .footer-access, .footer-services, .footer-contact {
+        padding-left: 1.5rem;
+    }
+    .social-media {
+        padding-left: 0rem;
+    }
+    .footer-access, .footer-services, .footer-contact {
+        width: 20%;
+    } 
+}
+
+@media all and (max-width: 768px) {
+    .footer-access, .footer-services, .footer-contact {
+        padding-left: 1.5rem;
+}
+}
+
+@media all and (max-width: 576px) {
+    .colonne {
+        flex-direction: column;
+    }
+    .footer-access, .footer-services, .footer-contact {
+        padding: 0.675rem;
+        padding-left: 1rem;
+    }
+
+    .logo {
+        padding-left: 12.5rem;
+    }
+
+    .footer-logo p {
+        padding-left: 8.5rem;
+    }
+
+    .social-media {
+        font-size: 3.5rem;
+        padding-left: 0rem;
+        justify-content: space-around;
+    }
+
+    .social-media li {
+        padding: 1rem 8.6rem 1rem 0rem;
+    }
+
+    .footer-queries {
+        flex-direction: column;
+    }
+
+    .social-media li:last-child {
+        padding-right: 0;
+    }
+}
