--- a/asset/css/authentification.css
+++ b/asset/css/authentification.css
@@ -3,12 +3,13 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Baloo22";
 }
  
 /*style qui s'applique au header*/
 
 header{
-     width: 100%;
+     width: auto;
      background-color: #B1F3BC;
      margin:auto;
      display:flex;
@@ -16,32 +17,63 @@ header{
      align-items:center;
     }
 
-ul {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    ul{
+        display:flex;
         list-style: none;
-        width: 100%;
-        margin-left: 40px;
-        margin-right: 40px;
-        font-size: 15px;
+    }
+    
+    li{
+        padding-right: 40px;
+        
+    }
+
+/*style qui s'applique à la partie main*/
+
+main{
+    height:100vh;
+    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-/*style qui s'applique a*/
-
-.logoacgd{
-margin-left:30px;
-margin-top:10px;
-margin-bottom:10px;    
+.form_container{
+    height: 60%;
+    width: 45%;
+    border: 3px solid black;
+    border-radius: 30px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 95px;
+    position: absolute;
+    left: 0px;
+    top: 150px;
+     
 }
 
+.form_container_heading{
+    font-size: 1.2rem;
+    font-family:sans-serif;
+    color: #B1F3BC;
+}
 
+.form_container_inputs,
+.form_container_button {
+    padding: 15px;
+    width: 80%;
+    border-radius: 10px;
+    border: 2px solid black;
+    outline:none;
+}
+.form_container_button{
+    width: 85%;
+    background-color: #B1F3BC;
+    color: #fff;
 
-   
-
-
-
-
-
-
-
+}
+.img{
+    width: 100px;;
+}
