fix footer responsive problem in small mobile view

--- a/asset/css/header-footer.css
+++ b/asset/css/header-footer.css
@@ -99,7 +99,7 @@ footer {
     padding: 20px;
 }
 
-footer p, footer h2, footer li {
+footer p, footer h2, .footer-queries a {
     color: var(--third-color);
 }
 
@@ -188,7 +188,8 @@ footer li a:hover {
 @media all and (max-width: 768px) {
     .footer-access, .footer-services, .footer-contact {
         padding-left: 1.5rem;
-}
+        width: max-content;
+    }
 }
 
 @media all and (max-width: 576px) {
@@ -225,4 +226,16 @@ footer li a:hover {
     .social-media li:last-child {
         padding-right: 0;
     }
+}
+
+@media all and (max-width: 460px) {
+
+    .logo {
+        padding-left: 6.5rem;
+    }
+
+    .social-media li {
+        padding-right: 4rem;
+    }
+
 }
