--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -118,7 +118,7 @@ main {
     
 }
 
-zone5 {
+.zone5 {
     display: flex;
     flex-direction: column;
     width: 50%;
@@ -208,6 +208,9 @@ button {
             width: 50%;
         }
 
+        .zone5 {
+            width: 100%;
+        }
     }
 
     @media all AND (max-width:768px)
@@ -237,7 +240,6 @@ button {
         .zone2 {
             width: 60%;
         }
-
 
         .zone7  {
             display: none;
