--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -409,7 +409,7 @@ i[class="fa-solid fa-bed"] {
 
 .agency p {
     text-align: center;
-    /font-weight: 580;*/
+    /*font-weight: 580;*/
 }
 
 .button_contact {
