--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -83,6 +83,12 @@ header {
 
 /*body - page contact*/
 
+    /*fond page - à corriger*/
+.background-picture {
+    background-image: url("https ://asset/images/squarecurie.jpg");
+    background-color: #ffffff;
+}
+
 h1 {
     font-family: "baloo2";
     font-weight: 500;
@@ -139,6 +145,7 @@ h1 {
 .button {
     width: 0.188rem;
     background-color: #E2FBB7;
+    
 }
 
 .find-us {
