--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -984,22 +984,60 @@ button {
     }
 
     /*bannière avec fonction recherche*/
-    .menu_search_deco {
-        width: 10rem;
+
+    .search {
+        background-color: inherit;
     }
 
-    .banner {
-        padding: 4rem 0;
+    .menu_search {
+        flex-direction: column;
+        justify-content: none;
+        align-items: center;
+        margin: 0 auto; 
+    }
+
+    .menu_search_deco {
+        margin-top: 5px;
     }
 
     .input_icon_search + i {
-    left: 140px;
+        top: 13px;
+        left: 295px !important;
+    }
+
+    .size_form select {
+        width: 20rem;
+    }
+
+    .size_form input {
+        width: 19.6rem;
+    }
+
+    .search_btn button {
+        width: 20rem;
     }
 
     /*section actualités*/
     .news_slide {
         padding-left: 3rem;
         padding-right: 3rem;
+        flex-wrap: wrap;
+        gap: 3em 1em;
+        margin-left: 5rem;
+        margin-right: 5rem;
+    }
+
+    .size_flex {
+        min-width: 40%;
+        flex-grow: 1;
+    }
+
+    .news_all {
+        height: 151px;
+    }
+
+    .news_1, .news_2, .news_3, .news_all {
+        margin: 0 auto;
     }
 
     /*section derniers biens en vente*/
@@ -1021,6 +1059,19 @@ button {
     /*header : logo et menu*/
      header ul {
         padding-left: 0;
+    }
+
+    /*bannière avec fonction recherche*/
+    .menu_search_deco {
+        width: 10rem;
+    }
+
+    .banner {
+        padding: 2rem 0;
+    }
+
+    .input_icon_search + i {
+    left: 140px;
     }
 
 }
