--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -18,8 +18,13 @@
 
 a {
     text-decoration: none;
-    color: #000;
+    color: #000;    
 }
+
+.logo:hover {
+    opacity: 0.6;
+}
+
 .title-txt {
     font-family: "Baloo2", sans-serif;
     font-size: 1.4rem;
