--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -584,8 +584,209 @@ button {
 }
 
 /*-----------------------------------------------------------------------*/
-@media all and (max-width: 576px) {
 
+/*----------------------------------------------*/
+@media screen and (max-width: 480px) {
+
+    /*header : logo et menu*/
+    nav ul li {
+        display: none;
+        }
+
+    .auth {
+        display: none;
+    }
+
+    .menu_burger {
+        display: block;
+        position: relative;
+        top: 38px;
+        right: 10px;
+    }
+
+    header {
+        padding-bottom: 0;
+    }
+
+    .fa-bars {
+        font-size: 2rem;
+    }
+
+    .logo {
+        margin-left: 0.2rem;
+    }
+
+
+    /*bannière avec fonction recherche*/
+    .banner {
+        padding: 0 0 !important;
+    }
+
+    .search {
+        background-color: inherit;
+    }
+
+    .menu_search {
+        flex-direction: column;
+        justify-content: none;
+        align-items: center;
+        margin: 0 auto; 
+    }
+
+    .menu_search_deco {
+        margin-top: 5px;
+    }
+
+    .input_icon_search + i {
+        display: none;
+    }
+
+    .size_form select {
+        width: 10rem !important;
+        margin: 0 auto;
+        margin-top: 0.5rem;
+    }
+
+    .size_form input {
+        width: 9.625rem !important;
+        margin: 0 auto;
+        margin-top: 0.5rem;
+    }
+
+    .search_btn button {
+        width: 10rem !important;
+        padding-right: 0;
+        margin: 0 auto;
+        margin-top: 0.5rem;
+    }
+
+    /*section actualités*/
+    .news_slide {
+        flex-direction: column;
+        padding-left: 2rem !important;
+        padding-right: 2rem !important;
+        align-items: center;
+        flex-wrap: nowrap !important;
+    }
+
+    .news h1 {
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+    }
+
+    .news_1, .news_2, .news_3 {
+        margin-bottom: 2rem;
+    }
+
+    .news {
+        padding-bottom: 1rem;
+    }
+
+    /*section derniers biens en vente*/
+    .sell {
+        padding-bottom: 0;
+    }
+
+    .sell h1 {
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+    }
+
+    .sell_slide {
+        padding-left: 1rem !important;
+        padding-right: 1rem !important;
+    }
+
+    .sell_frame {
+        margin-bottom: 2rem;
+    }
+
+    .navbar_sell {
+        padding-bottom: 0.5rem;
+        margin-top: -1rem;
+    }
+
+    /*section avis clients*/
+    .customers {
+        padding-bottom: 2rem;
+        padding-top: 2rem;
+    }
+
+    .customers p {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+
+    .customers button {
+        width: 12rem !important;
+        transition: none;
+    }
+
+    .customers button:hover {
+        pointer-events: none;
+        transition: none;
+    }
+
+    /*section article agence*/
+    .agency {
+        padding-bottom: 0.5rem;
+    }
+
+    .agency h1 {
+        padding-top: 2rem;
+        padding-bottom: 0.5rem;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+    }
+
+    .bkg_agency p {
+        margin-left: 2rem;
+        margin-right: 2rem;
+        padding-bottom: 1rem;
+        padding-top: 0;
+        margin-bottom: 0;
+        margin-top: 0;
+        text-justify: inter-word;
+        text-align: left !important;
+    }
+
+    .button_contact, .button_estimate {
+        transition: none;
+        width: 6rem !important;
+    }
+
+   .button_contact:hover, .button_estimate:hover {
+    pointer-events: none;
+    transform: none;
+    }
+
+    .center_button {
+        margin-top: 0;
+    }
+
+    .button_contact button, .button_estimate button {
+        display: inline;
+    }
+
+    .bkg_agency {
+        padding-bottom: 2rem;
+    }
+
+    /*section footer*/
+
+    .column2, .column3, .column4 {
+        margin-left: 0.1rem !important;
+        
+    }
+
+    footer {
+        padding-left: 0.2rem !important;
+
+    }
+}
+
+/*------------------------------------------*/
+@media screen and (max-width: 576px) {
 
 /*header : logo et menu*/
     nav ul li {
@@ -669,7 +870,7 @@ button {
         padding-bottom: 1rem;
     }
 
-/*section derniers biens en vente*/
+    /*section derniers biens en vente*/
     .sell {
         padding-bottom: 0;
     }
@@ -679,12 +880,17 @@ button {
         padding-bottom: 1.5rem;
     }
 
+    .sell_slide {
+        padding-left: 1rem !important;
+        padding-right: 1rem !important;
+    }
+
     .sell_frame {
         margin-bottom: 2rem;
     }
 
-    #frame_2, #frame_3, #frame_4 {
-        display: none;
+    #frame_1, #frame_2, #frame_4 {
+        display: none !important;
     }
 
     .navbar_sell {
@@ -692,14 +898,19 @@ button {
         margin-top: -1rem;
     }
 
-/*section avis clients*/
+    /*section avis clients*/
     .customers {
         padding-bottom: 2rem;
         padding-top: 2rem;
     }
 
+    .customers p {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+
     .customers button {
-        width: auto;
+        width: 12rem !important;
         transition: none;
     }
 
@@ -781,7 +992,7 @@ button {
 
 /*--------------------------------------------*/
 
-@media all and (max-width: 768px) {
+@media screen and (max-width: 768px) {
    
     /*header : logo et menu*/
     nav ul li {
@@ -879,13 +1090,18 @@ button {
         margin-bottom: 2rem;
     }
 
-    #frame_2, #frame_3, #frame_4 {
-        display: none;
-    }
-
     .navbar_sell {
         padding-bottom: 0.5rem;
         margin-top: -1rem;
+    }
+
+    .sell_slide {
+        padding-left: 1rem !important;
+        padding-right: 1rem !important;
+    }
+
+    #frame_1, #frame_2, #frame_4 {
+        display: none !important;
     }
 
     /*section avis clients*/
@@ -976,7 +1192,7 @@ button {
 }
 
 /*-----------------------------------------------*/
-@media all and (max-width: 992px) {
+@media screen and (max-width: 992px) {
      
     /*header : logo et menu*/
      header ul {
@@ -1046,6 +1262,15 @@ button {
         padding-right: 3rem;
     }
 
+    #frame_1, #frame_4 {
+        display: none;
+    }
+
+    .sell_slide {
+        padding-left: 10rem;
+        padding-right: 10rem;
+    }
+
     /*section avis clients*/
     .customers button {
         width: 20%;
@@ -1054,7 +1279,7 @@ button {
 }
 
 /*-----------------------------------------------*/
-@media all and (max-width: 1200px) {
+@media screen and (max-width: 1200px) {
      
     /*header : logo et menu*/
      header ul {
