--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -54,19 +54,14 @@ header {
 }
 h1, h2, h3, h4 {
     font-family: baloo2;
+}
+
+h1 {
     text-align: center;
 }
 
-h2 {
-    background-color: var(--main-color);
-}
-
 p {
-    background-color: var(--main-color);
     font-family: opensans;
-    text-align: justify;
-    padding: 0px 12px 12px 12px;
-    
 }
 
 .logo-alter {
@@ -74,6 +69,10 @@ p {
 }
 
 /*---------------------------------------*/
+
+main {
+    background-color: var(--main-color);
+}
 
 .backpict, .title-search {
     display: flex;
@@ -97,6 +96,15 @@ h1 {
 main {
     display: flex;
     flex-direction: column;
+}
+
+main p {
+    text-align: justify;
+    padding: 0px 12px 12px 12px;
+}
+
+main h2 {
+    text-align: center;
 }
 
 .zone0 {
@@ -159,6 +167,7 @@ form {
     justify-content: space-between;
     flex-direction: row;
     align-items: baseline;
+    background-color:white;
     padding: 0.675rem;
     font-family: opensans;
     font-size: 1.5rem;
@@ -294,32 +303,164 @@ button {
 /* footer */
 
 footer {
+    background-color: #1f1f1f;
+    font-family: "opensans";
+    padding-top: 0.675rem;
+}
+
+.social-media {
+    color: var(--third-color);
     display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: 20%;
-    justify-content: space-between;
-    background-color: black;
-    color: white;
+    flex-direction: row;
+    font-size: 1.5rem;
+    padding-left: 38px;
+}
+
+.social-media li {
+    padding: 20px;
+}
+
+footer p, footer h2, .footer-queries a {
+    color: var(--third-color);
+}
+
+.colonne {
+    display: flex;
+    padding-top: 0.675rem;
 }
 
 footer ul {
-    margin-top: 12px;
-    margin-right: auto;
-    margin-left: 12px;
-    margin-bottom: 12px;
+    flex-flow: column;
 }
 
 footer li {
     list-style: none;
-    font-family: opensans;
+    padding-bottom: 1rem;
 }
 
-.social-media {
+.footer-services, .footer-access, .footer-contact {
+    display: flex;
+    flex-direction: column;
+    padding-left: 8.95rem;
+}
+
+
+.copyright {
+    padding-bottom: 0.675rem;
+    text-align: center;
+}
+
+.footer-logo img {
+    width: 150px;
+    height: 73px;
+}
+
+.footer-logo {
+    padding: 0.675rem;
+    padding-top: 0;
+}
+
+footer p {
+padding-left: 9px;
+padding-top: 2rem;
+
+}
+
+#fb:hover, #tw:hover, #insta:hover {
+    transform: scale(2);
+    cursor: pointer;
+}
+
+footer h2 {
+    padding-bottom: 10px;
+}
+
+footer li a:hover {
+    text-decoration: underline;
+}
+
+.footer-queries {
     display: flex;
     justify-content: space-around;
 }
 
+@media all and (max-width: 1200px) {
+    .colonne {
+        flex-direction: column;
+    }
+
+    .footer-access, .footer-services, .footer-contact {
+        width: 33.33%;
+    }
+
+}
+
+@media all and (max-width: 992px) {
+    .footer-access, .footer-services, .footer-contact {
+        padding-left: 1.5rem;
+    }
+    .social-media {
+        padding-left: 0rem;
+    }
+    .footer-access, .footer-services, .footer-contact {
+        width: 20%;
+    } 
+}
+
+@media all and (max-width: 768px) {
+    .footer-access, .footer-services, .footer-contact {
+        padding-left: 1.5rem;
+        width: max-content;
+    }
+}
+
+@media all and (max-width: 576px) {
+    .colonne {
+        flex-direction: column;
+    }
+    .footer-access, .footer-services, .footer-contact {
+        padding: 0.675rem;
+        padding-left: 1rem;
+    }
+
+    .logo {
+        padding-left: 12.5rem;
+    }
+
+    .footer-logo p {
+        padding-left: 8.5rem;
+    }
+
+    .social-media {
+        font-size: 3.5rem;
+        padding-left: 0rem;
+        justify-content: space-around;
+    }
+
+    .social-media li {
+        padding: 1rem 8.6rem 1rem 0rem;
+    }
+
+    .footer-queries {
+        flex-direction: column;
+    }
+
+    .social-media li:last-child {
+        padding-right: 0;
+    }
+}
+
+@media all and (max-width: 460px) {
+
+    .logo {
+        padding-left: 6.5rem;
+    }
+
+    .social-media li {
+        padding-right: 4rem;
+    }
+
+}
 /*---------------------------------------*/
 
 /* Add media query for header */
