--- a/asset/css/offers.css
+++ b/asset/css/offers.css
@@ -2,7 +2,6 @@
 améliorer les offres,
 améliorer le paging 
 optimiser le code
-terminer le code 
 
 font-size: calc   (min value + (max value - min value) * ((100vw - bp min) / (bp max - bp min)));
 avec bp = break point
@@ -25,60 +24,286 @@ avec bp = break point
     text-decoration: none;
     font-family: "baloo 2"
 }
+/******************************HEADER***********************************/
+
+.logo:hover {
+    opacity: 0.6;
+}
+
+header a {
+    text-decoration: none;
+}
+
+.title-txt {
+    font-family: "Baloo2", sans-serif;
+    font-size: 1.4rem;
+}
+.flex {
+    display: flex;
+}
+
+.justify-content{
+    justify-content: space-between;
+}
+
+.align-item{
+    align-items: center;
+}
+
+.menu li {
+    list-style: none;
+    margin: 0 40px 0 0;
+}
+
+.menu a:hover, .logo-mon-compte:hover {
+    font-weight: bolder;
+}
 
 header {
-    background: #B1F3BC;
-    padding: 0.625rem;
+    background-color: var(--main-color);
+    font-family: baloo2;
+    font-size: 1.4rem;
+    padding: 0.675rem;
+}
+
+#check, .checkbtn {
+    display: none;
+    cursor: pointer;
+}
+
+@media all and (max-width: 768px) {
+    .checkbtn {
+        display: block;
+        font-size: 30px;
+        padding-right: 0.675rem;
+        color: black;
+        float: right;
+    }
+    .menu, .logo-mon-compte, header nav {
+        display: none!important;
+    }
+}
+
+
+/********************************HEADER-END********************************/
+
+
+/********************************MOBILE*************************************/
+
+@media all and (max-width:383px){ 
+.section2-to-apply p {
+white-space: nowrap;
+}
+
+.mobile-top-text {
+    font-weight: bold;
+}
+}
+
+@media all and (min-width:768px){ 
+.mobile {display: none;}
+}
+
+@media all and (max-width:768px){ 
+    .desktop {
+        display: none;
+    }
+
+main {
+    font-family: "opensans";
+}
+.mobile-top-offer {
     display: flex;
-    justify-content: space-between;
-    font-family: "Baloo2-Bold";
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+    font-size: large;
 }
 
-body header nav a {
+.mobile-top-text {
+    text-align: center;
+    position: absolute;  
+    font-weight: bold;
+    }
+}
+
+
+#top-offer1, #top-offer2, #top-offer3 {
+    width: 30%;
+    border-radius: 0.625em;
+}
+
+#top-offer1 {
+    position: absolute;
+    left: 25%;
+    filter: blur(0.3125em);
+    z-index: -1;
+}
+
+#top-offer3 {
+    position: absolute;
+    left: 45%;
+    filter: blur(0.3125em);
+    z-index: -1;
+}
+
+.go-left, .go-right {
     text-decoration: none;
-    color: #1F1F1F;
-    margin: 1.875rem;
+    border: 0.1875em solid #B1F3BC;
+    border-radius: 2rem;
+    background-color: white;
+    color: #B1F3BC;
+}
+
+.directions {
+    display: flex;
+    margin-top: 1.5%;
+    justify-content: space-around;
+    gap: 20%;
+}
+
+.background-color {
+    background-color: #1F1F1F;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+}
+
+.logo-form i {
+    position: absolute;
+    left: 1.875em;
+    top: 50%;
+    transform: translateY(-50%);
+    color:#1F1F1F 
+  }
+
+  .logo-form {
+    display: flex;
+    position: relative;
+  }
+
+  #form, #form2 {
+    margin-left: 1%;
+    padding-left: 9%;
+    width: 100%;
+    margin-right: 1%;
+  }
+
+
+.mobile-h2 {
+    margin-left: 2rem;
+    margin-bottom: -1rem;
+}
+
+.section2-photos {
+    height: 15rem;
+   /* border: 1.875rem solid #B1F3BC; */
+    border-radius: 0.938rem;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+    margin-top: .8rem;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: smaller;
+    white-space: nowrap;;
+}
+
+#offer-photo {
+    width: 100%;
+    height: 100%;
+}
+
+.agent {
+    text-align: center;
+}
+
+.mobile-paging {
+    display: flex;
+    width: 50%;
+    list-style: none;
+    margin: 0 auto;
+}
+
+#form-container {
+width: 10%;
+margin: 0 auto;
+}
+
+.mobile-paging li {
+    margin: 0 2%;
+    text-decoration: none;
+    padding: 2%;
+}
+
+.inside {
+    padding-top: 0.063rem;
+}
+
+.mobile-paging a {
+    display: block;
+    padding: 8px;
+    text-decoration: none;
+    border: 0.063rem solid #B1F3BC;
+    border-radius: 2rem;
+}
+
+#mobile-page-select {
+  appearance: none;
+  -moz-appearance: none;
+  border: 0.125rem solid #B1F3BC;
+  border-radius: 3.125rem; /* La moitié de la hauteur pour créer un cercle */
+  padding: 0.625rem; /* Ajoutez du rembourrage pour un meilleur aspect */
+  cursor: pointer;
+  margin-left: 1%;
+}
+
+#announce-number {
+    text-align: center;
+    color: grey;
+    font-size: x-small;
+    margin-top: 9px;
+}
+
+.to-apply {
+    padding: 0.313rem 0.625rem;
+    background-color: #1F1F1F;
+    color: white;
+    border-radius: 0.313rem;
+    cursor: pointer;
+}
+
+.to-apply:hover {
+    transform: scale(1.05);
+}
+
+.about-us {
+    padding: 0.313rem 0.625rem;
+    background-color: #b1f3bc;
+    border-radius: 0.313rem;
+    cursor: pointer;
     font-size: medium;
+    border-color: #B1F3BC;
+    width: 100%;
 }
 
-body header nav a:hover { 
-    font-weight: bold;
+.about {
+width: 50%;
+margin: 0 auto;
+margin-bottom: 2.5%;
 }
 
-#user-logo {
-    text-decoration: none;
-    margin-top: 0.738px;
+.mobile-map {
+    width: 100%;
+    margin: 0 auto;
 }
 
-#user-logo:hover {
-    font-weight: bold;
+#map {
+    width: 100%;
 }
 
-.auth:hover {
-    font-weight: bold;
-}
+/*******************************MOBILE-END**********************************/
 
-.logo-auth {
-    margin-top: 0.5rem;
-}
-
-
-#account {
-    margin-top: 0.375rem;
-}
-
-#logo {
-    width: 82.5px;
-    height: 40.15px;
-}
-
-#logo:hover {
-    transform: scale(1.1);
-}
-
-.menu {
-    margin-top: 0.5rem;
-}
+/*******************************DESKTOP*************************************/
 
 .section1 {
     background: #1F1F1F;
@@ -98,9 +323,20 @@ body header nav a:hover {
     gap: 4.375rem;
 }
 
-#form {
+.desktop-form-contract {
+    display: flex;
+    width: 300px;
+    margin: 0 auto;
+}
+
+#form, #form2 {
     border-radius: 0.313rem;
-    padding-left: 2rem;
+}
+
+#form2 {
+    height: 1.5rem;
+    width: 7rem;
+    margin-top: 1rem;
 }
 
 ::placeholder {
@@ -113,7 +349,7 @@ body header nav a:hover {
 
   .logo-form i {
     position: absolute;
-    left: 10px;
+    left: 3%;
     top: 50%;
     transform: translateY(-50%);
     color:#1F1F1F 
@@ -121,10 +357,17 @@ body header nav a:hover {
 
   .logo-form2 i {
     position: absolute;
-    left: 10px;
+    left: 5.5%;
     top: 50%;
     transform: translateY(-50%);
     color:#1F1F1F 
+  }
+
+  #form {
+    margin-left: 1%;
+    padding-left: 13%;
+    width: 65%;
+    margin-right: 1%;
   }
 
 #research {
@@ -147,45 +390,41 @@ body header nav a:hover {
 .refresh-logo-reinitiate {
     display: flex;
     margin: 0 1.25rem;
-}
+padding-top: 2%;}
 
 .refresh-logo, .reinitiate {
     margin: 0.25rem;
+    padding-top: 5px;
 }
 
 .refresh-logo-reinitiate:hover {
     font-weight: bold;
 }
 
-/* comment ajuster la hauter de mon formulaire choix du contrat ? */
-.form-contract {
-    display: flex;
-    justify-content: center;
-    padding-top: 1.25rem;
-    gap: 1.25rem;
-    padding-bottom: 1.563rem;
-}
-
 .reinitiate {
     padding-bottom: 0.625rem;
 }
 
+.desktop-map {
+    height: 15rem;
+}
+
+
 .section2-title {
     padding-top: 1rem;
-    padding-left: 4.063rem;
+    padding-left: 2%;
+    padding-right: 2%;
     font-size: x-large;
 }
 
 .section2-photos {
-    width: 9.375rem;
     height: 6.25rem;
-    border: 1.875rem solid #B1F3BC;
+    border: 0.75rem solid #B1F3BC;
     border-radius: 0.938rem;
     margin-left: 2.5rem;
-    margin-top: 1.25rem;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: smaller;
-    white-space: nowrap;;
+    white-space: nowrap;
+    margin-bottom: 2.5%;
 }
 
 .section2-photos img {
@@ -207,10 +446,17 @@ body header nav a:hover {
 
 .photos-map {
     display: flex;
+    width: 100%;
 }
 
+
 #map {
-    margin-left: 8.5rem;
+    border-radius: 20px;
+    transition: transform 0.3s;
+}
+
+#map:hover {
+    transform: scale(1.05);
 }
 
 /* je ne parviens pas à arrondir les bords de mes offer-photo */
@@ -218,8 +464,8 @@ body header nav a:hover {
 .paging {
     display: flex;
    list-style: none;
-    margin-left: 7.5rem;
-    margin-top: -3.375rem;
+    width: 50%;
+    margin: 0 auto;
 }
 
 .paging li {
@@ -251,13 +497,11 @@ body header nav a:hover {
 }
 
 .agent {
-    margin-left: 0;
     padding-left: 0px;
     text-align: center;
 }
 
 #announce-number {
-    margin-left: 20rem;
     color: grey;
     font-size: x-small;
     margin-top: 9px;
@@ -265,21 +509,20 @@ body header nav a:hover {
 
 .section2 {
     display: flex;
+    width: 50%;
 }
 
 .section2-to-apply {
-    width: 14.375rem;
+    width: 50%;
     height: 3.125rem;
     border: 0.625rem solid #B1F3BC;
     border-radius: 0.938rem;
-    margin-left: 31.25rem;
+    margin: 0 auto;
     margin-top: 0.625rem;
     margin-bottom: 0.625rem;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: smaller;
     text-align: center;
     background-color: #B1F3BC;
-    white-space: nowrap;
 }
 
 .to-apply {
@@ -363,10 +606,6 @@ figcaption {
     margin-left: 20px;
 }
 
-#agency {
-    margin-right: 8.125rem;
-}
-
 .testimonies {
     display: flex;
     justify-content: center;
@@ -403,23 +642,29 @@ padding-left: 135px;
     color: #1F1F1F;
 }
 
+/*********************************FOOTER************************************/
+
+
 footer {
     background-color: #1f1f1f;
-    font-size: 1.1rem;
-    cursor: default;
+    font-family: "opensans";
+    padding-top: 0.675rem;
 }
+
+footer a {
+        text-decoration: none;
+    }
 
 .social-media {
     color: var(--third-color);
     display: flex;
     flex-direction: row;
-    margin-top: 20px;
-    gap: 30px;
-    margin-left: 140px;
+    font-size: 1.5rem;
+    padding-left: 38px;
 }
 
-#fb:hover, #tw:hover, #insta:hover {
-    transform: scale(1.5);
+.social-media li {
+    padding: 20px;
 }
 
 footer p, footer h2, footer li {
@@ -437,54 +682,211 @@ footer ul {
 
 footer li {
     list-style: none;
-}
-
-footer li:hover:not(.number) {
-    text-decoration: underline;
-    cursor:pointer;
-}
-
-.number {
-    cursor: default;
+    padding-bottom: 0.5rem;
 }
 
 .footer-services, .footer-access, .footer-contact {
     display: flex;
     flex-direction: column;
+    padding-left: 8.5rem;
 }
 
-.footer-access, .footer-contact, .footer-services {
-    padding-left: 8.3rem;
-}
 
 .copyright {
-    padding-bottom: 0.675rem;
+    padding-bottom: 0.5rem;
     text-align: center;
 }
 
 .footer-logo img {
-    width: 82.5px;
-    height: 40.15px;
-    margin-left: 10px;
+    width: 150px;
+    height: 73px;
 }
 
-.footer-logo img:hover {
-    transform: scale(1.1);
+.footer-logo {
+    padding: 0.675rem;
+    padding-top: 0;
 }
 
 footer p {
-margin-left: 80px;
-margin-top: 20px;
+padding-left: 9px;
 }
+
+#fb:hover, #tw:hover, #insta:hover {
+    transform: scale(2);
+    cursor: pointer;
+}
+
+footer h2 {
+    padding-bottom: 10px;
+}
+
+footer li a:hover {
+    text-decoration: underline;
+}
+
+.footer-queries {
+    display: flex;
+    justify-content: space-around;
+}
+
+@media all and (max-width: 576px) {
+    
+            .colonne {
+            flex-direction: column;
+            }
+
+            footer p {
+            text-align: center;
+            padding-top: 20px;
+            }
+
+            .social-media {
+            justify-content: center;
+            gap: 70px;
+            font-size: xx-large;
+            padding-top: 8px;
+            margin-bottom: -10px;
+            }
+
+            .footer-queries {
+            flex-direction: column;
+            margin-left: 100px;
+            margin-top: -10px;
+            }
+
+
+            footer h2 {
+            margin-bottom: 10px;
+            padding-top: 10px;
+            }
+
+            footer li {
+            white-space: nowrap;
+            }
+}
+
+@media all and (max-width: 768px) {
+    .colonne {
+        flex-direction: column;
+        align-items: center;
+    }
+        .footer-queries {
+            flex-direction: column;
+            margin-left: -60px;
+        }
+
+        footer .logo {
+            margin-left: 80px;
+        }
+
+            footer p {
+                padding-top: 1.3rem;
+            }
+
+            .social-media {
+            justify-content: space-between;              
+            padding: 0;    
+            font-size: xx-large;
+            margin-bottom: -20px;
+  }
+
+             footer h2 {
+            margin-bottom: -3px;
+            margin-top: 3px;
+}
+}
+
+
+
+/***************************************992**************************************/
+
+@media all and (max-width:992px){
+
+    .h4-responsive {
+        display: none;
+    }
+
+    .colonne {
+        flex-direction: column;
+    }
+
+    footer p {
+        text-align: center;
+        padding-top: 0;
+}
+
+.social-media {
+    justify-content: center;
+    font-size:xx-large ;
+    gap: 60px;
+}
+}
+
+#team, figcaption {
+    margin: 0 auto;
+    padding-left: 10%;
+    padding-bottom: 3%;
+}
+
+.photo7 {
+    width: 75%;
+}
+
+.agency {
+    margin-bottom: -12%;
+}
+
+#announce-number {
+    text-align: center;
+}
+
+.paging {
+    margin-top: 1.5%;
+}
+
+.form-contract {
+    display: flex;
+    width: 20%;
+    margin-right: 1%;
+    padding-bottom: 1%;
+    padding-top: .5%;
+    height: 100%;
+}
+
+@media all and (max-width:1200px) {
+    .colonne {
+        flex-direction: column;
+    }
+
+    footer p {
+        text-align: center;
+}
+.social-media {
+    justify-content: center;
+    font-size:xx-large ;
+    gap: 60px;
+}
+}
+
+
+@media all and (max-width:2000px){
+
+    .h4-responsive {
+        display: none;
+    }
+}
+
+
+
+/******************************FOOTER-END********************************/
+
 
 @media all and (max-width:768px) {
     .section1-form {
         display: inherit;
         text-align: center;
     }
-    .logo-form2, .form-contract {
-        display: none;
-    }
+   
 
 h3 {
     margin-bottom: 15px;
@@ -507,11 +909,11 @@ h3 {
 }
 
 .section2-photos {
-    width: 32.5rem;
+    width: 50%;
     height: 6.25rem;
     border: 1.875rem solid #B1F3BC;
     border-radius: 0.938rem;
-    margin-left: 2.5rem;
+    margin: 0 auto;
     margin-top: 1.25rem;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: smaller;
@@ -525,6 +927,7 @@ h3 {
 
 .agent {
     margin-top: -4px;
+    text-align: center;
 }
 
 .photos-map2 {
@@ -534,14 +937,6 @@ h3 {
 #research {
     margin-top: 10px;
     margin-bottom: 10px;
-}
-
-.responsive-map {
-    margin-t
-}
-
-.section2-to-apply {
-    margin-left: 245px;
 }
 
 .paging li, #page-select {
@@ -557,7 +952,6 @@ h3 {
 }
 }
 
-
 @media all and (min-width:768px){
 
 }
@@ -570,57 +964,6 @@ h3 {
 
 }
 
-@media all and (max-width:576px) {
-
-.h4 {
-    display: none;
-}
-
-
-.logo-form {
-    display: flex;
-    justify-content: center;
-}
-
-    .section2-photos {
-        width: 32.5rem;
-        height: 6.25rem;
-        border: 1.875rem solid #B1F3BC;
-        border-radius: 0.938rem;
-        margin-left: .5rem;
-        margin-top: 1.25rem;
-        font-family:Verdana, Geneva, Tahoma, sans-serif;
-        font-size: smaller;
-        white-space: nowrap;
-    }
-
-  footer, #map,  {
-    display: none;
-  }
-
-.paging {
-    gap: 345px;
-    margin-left: 80px;
-}
-
-.section2-to-apply {
-    margin-left: 175px;
-}
-
-#announce-number {
-    margin-left: 16rem;
-}
-}
-
-@media all and (min-width:992px) {
-    .h4responsive {
-        display: none;
-    }
-        }
-
-        #form {
-            display: flex;
-        }
 
 /* 
     Jusqu’à 479px : smartphone en portrait
