--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -185,12 +185,14 @@ input {
 button {
     width: 10rem;
     margin: 0rem 0rem 0.675rem 0rem;
+    background-color: #E2FBB7;
 }
 
 select {
     text-align: center;
     width: 10rem;
     margin: 0rem 0rem 0.675rem 0rem;
+    background-color: #E2FBB7;
 }
 
 @media all AND (max-width:1400px)
